feat: add hybridMatcher